<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="Illegal_info">Illegal application ,check init !</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="action_done">完成</string>
    <string name="action_settings">Settings</string>
    <string name="activity_add_comments_title_text">给亲友评论</string>
    <string name="activity_cancel_concern_friends_hint">确定不再关注Ta吗？</string>
    <string name="activity_creage_fridge_message_send_text">发送</string>
    <string name="activity_creage_fridge_message_title_text">新增留言板</string>
    <string name="activity_failur_description_hint_text">请输入您遇到的故障问题</string>
    <string name="activity_failur_details_address_hint_text">请输入您的详细地址</string>
    <string name="activity_failur_location_not_finished_toast">请填写完整所在地区信息</string>
    <string name="activity_failur_no_address_toast">详细地址不能为空！</string>
    <string name="activity_failur_no_description_toast">故障问题不能为空!</string>
    <string name="activity_failur_no_fault_type_toast">故障类型必选！</string>
    <string name="activity_failur_no_location_toast">所在地区必选！</string>
    <string name="activity_failur_no_name_toast">姓名不能为空！</string>
    <string name="activity_failur_no_phone_number_toast">手机号不能为空！</string>
    <string name="activity_failur_phone_number_hint_text">请输入您的手机号</string>
    <string name="activity_failur_phone_number_invalid_toast">手机号不合法！</string>
    <string name="activity_failur_report_input_limit_text">%1$s/200</string>
    <string name="activity_failur_report_location_selector_close">关闭</string>
    <string name="activity_failur_report_location_selector_finish">完成</string>
    <string name="activity_failur_report_network_error_toast">提交失败!</string>
    <string name="activity_failur_report_seperator_text">或</string>
    <string name="activity_failur_report_service_tel_number">4006065522</string>
    <string name="activity_failur_report_submit_text">提交</string>
    <string name="activity_failur_report_success_btn">关闭</string>
    <string name="activity_failur_report_success_content">提交成功!\n我们会尽快与您联系，感谢反馈</string>
    <string name="activity_failur_report_success_title">提交成功</string>
    <string name="activity_failur_report_tabel_caption_text">填写下方表单，直接申报故障</string>
    <string name="activity_failur_report_tel_info_text">冰箱如遇故障问题，请致电400-606-5522</string>
    <string name="activity_failur_report_title_text">故障申报</string>
    <string name="activity_failur_report_toast_btn">我知道了</string>
    <string name="activity_failur_select_location_hint_text">所在地区</string>
    <string name="activity_failur_type_hint_text">故障类型</string>
    <string name="activity_failur_user_name_hint_text">请输入您的姓名</string>
    <string name="activity_feedback_caption_text">您的宝贵意见，将帮助我们发现问题，您的意见是我们前进的动力。</string>
    <string name="activity_feedback_empty_content_toast_btn">我知道了</string>
    <string name="activity_feedback_empty_content_toast_text">请输入您的反馈意见！</string>
    <string name="activity_feedback_hint_text">请输入您的反馈意见</string>
    <string name="activity_feedback_network_error_toast">请检查当前网络!</string>
    <string name="activity_feedback_send_text">发送</string>
    <string name="activity_feedback_success_toast_btn">提交成功!</string>
    <string name="activity_feedback_title_text">意见反馈</string>
    <string name="activity_food_add_alarm_pop_clear">清空</string>
    <string name="activity_food_add_alarm_pop_title">设置食物闹钟</string>
    <string name="activity_food_add_alarm_search_hint">搜索食物</string>
    <string name="activity_food_add_alarm_search_no_food">抱歉，没有找到相关食物</string>
    <string name="activity_food_add_alarm_title">添加食物闹钟</string>
    <string name="activity_food_no_move_tip">发现冷藏室存在%d天没有移动的物体</string>
    <string name="activity_food_notice_cus_alarm_title">到期提醒</string>
    <string name="activity_food_notice_deleted_hint">要删除本条提醒消息吗？</string>
    <string name="activity_food_notice_menu_tip">推荐菜谱</string>
    <string name="activity_food_notice_no_btn">取消</string>
    <string name="activity_food_notice_nodata_txt">没有提醒消息</string>
    <string name="activity_food_notice_not_read_tip">未读消息</string>
    <string name="activity_food_notice_sys_expired_title">存放过长提醒</string>
    <string name="activity_food_notice_title">食物提醒</string>
    <string name="activity_food_notice_type1title">%1$s已到期</string>
    <string name="activity_food_notice_type2title">%1$s可能存放时间过长</string>
    <string name="activity_food_notice_type3title">存放过长提醒</string>
    <string name="activity_food_notice_yes_btn">确认</string>
    <string name="activity_friends_list_followed_me">关注我的</string>
    <string name="activity_friends_list_i_followed">我关注的</string>
    <string name="activity_friends_list_no_follower_hint">还没有人关注你</string>
    <string name="activity_friends_list_no_following_hint">您还没有添加亲友</string>
    <string name="activity_friends_list_remove_follower">不再让Ta关注我</string>
    <string name="activity_friends_list_remove_follower_toast">不再让 %1$s 关注我, Ta将不能再看到我的冰箱并留言给我</string>
    <string name="activity_friends_list_remove_friends">确定不再让TA关注您的冰箱信息吗？</string>
    <string name="activity_friends_list_stop_following">不再关注Ta</string>
    <string name="activity_friends_list_stop_following_toast">不再关注 %1$s , 你将不能再看到Ta的冰箱并留言给Ta</string>
    <string name="activity_friends_list_title_text">亲友</string>
    <string name="activity_menu_category_title">菜谱分类</string>
    <string name="activity_menu_search_hint">搜索你感兴趣的菜名或食材</string>
    <string name="activity_menu_search_hot_text">热门搜索</string>
    <string name="activity_menu_search_recent_text">近期搜索</string>
    <string name="activity_message_board_empty_text">没有留言</string>
    <string name="activity_message_board_header_text">您新建的留言将同步到冰箱上</string>
    <string name="activity_message_board_signature_text">—— %1$s</string>
    <string name="activity_message_board_title_text">冰箱留言板</string>
    <string name="activity_modify_user_nickname_caption_text">4-20个字符，可由中英文、数字、“-”、“_”组成</string>
    <string name="activity_modify_user_nickname_comfirm_text">确认</string>
    <string name="activity_modify_user_nickname_hint_text">请输入昵称</string>
    <string name="activity_modify_user_nickname_out_of_bound_text">请输入4-20个字符作为昵称！</string>
    <string name="activity_modify_user_nickname_title_text">修改昵称</string>
    <string name="activity_modify_user_nickname_toast_btn">我知道了</string>
    <string name="activity_modify_user_nickname_toast_text">输入中文、字母、数字、“-”“_”两种及以上的组合，4-20个字符</string>
    <string name="activity_my_fridge_comments_from_friends_title_text">来自亲友的评论</string>
    <string name="activity_my_fridge_comments_from_wechat_title_text">微信好友给我的评论</string>
    <string name="activity_my_fridge_comments_title_text">别人给我的评论</string>
    <string name="activity_nutrition_day">天</string>
    <string name="activity_nutrition_title">营养分析</string>
    <string name="activity_nutrition_title_tab1">营养分布</string>
    <string name="activity_nutrition_title_tab2">高卡高糖</string>
    <string name="activity_nutrition_title_tab3">营养明细</string>
    <string name="activity_nutrition_week">周</string>
    <string name="activity_picture_history_shot_date_text">摄于 %1$s</string>
    <string name="activity_picture_history_title_text">冰箱内景拍摄图</string>
    <string name="activity_qr_capture_follow_success">关注成功!</string>
    <string name="activity_qr_code_avaliable_duration">二维码有效时间20分钟\n对方手机客户端扫描二维码，可以关注我的冰箱</string>
    <string name="activity_qr_code_bottom_text">用京东智能冰箱APP扫描二维码, 加我为亲友</string>
    <string name="activity_qr_code_caption">我的冰箱</string>
    <string name="activity_qr_code_hint_line1">使用冰箱APP扫一扫二维码</string>
    <string name="activity_qr_code_hint_line2">查看我的京东智能冰箱</string>
    <string name="activity_qr_code_save_text">保存</string>
    <string name="activity_qr_code_tips">对准二维码/条形码到框内即可扫描</string>
    <string name="activity_qr_code_title_text">冰箱二维码</string>
    <string name="activity_qr_pic_generating_toast_text">正在生成冰箱二维码</string>
    <string name="activity_qr_pic_saved_toast_btn">我知道了</string>
    <string name="activity_qr_pic_saved_toast_text">冰箱共享二维码已保存到相册</string>
    <string name="activity_setting_check_update_text">检查更新</string>
    <string name="activity_setting_clean_cache_hint">确定清除本地缓存？</string>
    <string name="app_name">智能冰箱</string>
    <string name="contact_service_hint">联系客服。</string>
    <string name="contact_service_hint_prefix">遇到问题? 您可以</string>
    <string name="fast_register_title">手机快速注册</string>
    <string name="find_back_password">找回密码</string>
    <string name="finish_text">完成</string>
    <string name="fragment_mine_all_orders_text">全部订单</string>
    <string name="fragment_mine_collect_menu_text">我收藏的菜谱</string>
    <string name="fragment_mine_comment_text">亲友给我的评论</string>
    <string name="fragment_mine_fridge_message_board_text">冰箱留言板</string>
    <string name="fragment_mine_report_failur_text">故障申报</string>
    <string name="fragment_mine_setting_text">系统设置</string>
    <string name="fragment_mine_share_mine_fridge_text">分享我的冰箱</string>
    <string name="fragment_mine_shopping_cart_text">购物车</string>
    <string name="fragment_view_friend_fridge_text">查看亲友的冰箱</string>
    <string name="input_user_account">请输入京东用户名／手机号／邮箱</string>
    <string name="input_user_password">请输入密码</string>
    <string name="login_agreement">登录即代表您已经同意</string>
    <string name="login_text">登录</string>
    <string name="please_set_password">请设置登录密码</string>
    <string name="privacy_policy">用户隐私政策</string>
    <string name="set_password_tips">请将密码设置为6-20位，并且由字母，数字和符号两种以上组合。</string>
    <string name="tab_control_new">控制</string>
    <string name="tab_fridge">食物</string>
    <string name="tab_menu">菜谱</string>
    <string name="tab_mine">我的</string>
    <string name="title_register">注册</string>
</resources>