<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_above="@id/viewPager"
            android:background="@color/jd_gray_7"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_food"
                style="@style/style_RadioButton"
                android:checked="true"
                android:drawableTop="@drawable/rb_food_selector"
                android:text="@string/tab_fridge" />

            <RadioButton
                android:id="@+id/rb_menu"
                style="@style/style_RadioButton"
                android:drawableTop="@drawable/rb_menu_selector"
                android:text="@string/tab_menu" />

            <RadioButton
                android:id="@+id/rb_control"
                style="@style/style_RadioButton"
                android:drawableTop="@drawable/rb_control_selector"
                android:text="@string/tab_control_new" />

            <RadioButton
                android:id="@+id/rb_me"
                style="@style/style_RadioButton"
                android:drawableTop="@drawable/rb_me_selector"
                android:text="@string/tab_mine" />
        </RadioGroup>


    </RelativeLayout>
