<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:id="@+id/binding_view" android:visibility="visible" android:layout_width="match_parent" android:layout_height="match_parent" android:divider="@drawable/divider_line_shape" android:showDividers="none|beginning|middle|end">
        <LinearLayout android:orientation="vertical" android:id="@+id/layout_aboutMe" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:divider="@drawable/divider_line_shape" android:showDividers="none|beginning|middle">
            <TextView android:gravity="center_vertical" android:id="@+id/view_shareMyFridge" android:background="@drawable/white_color_bg_selector" android:paddingLeft="15dp" android:paddingRight="15dp" android:layout_width="match_parent" android:layout_height="53dp" android:text="@string/fragment_mine_share_mine_fridge_text" android:drawableLeft="@drawable/fridge_qr_icon" android:drawableRight="@drawable/ic_arrow_right" android:drawablePadding="10dp"/>
            <TextView android:gravity="center_vertical" android:id="@+id/view_comment" android:background="@drawable/white_color_bg_selector" android:paddingLeft="15dp" android:paddingRight="15dp" android:layout_width="match_parent" android:layout_height="53dp" android:text="@string/fragment_mine_comment_text" android:drawableLeft="@drawable/fridge_message_icon" android:drawableRight="@drawable/ic_arrow_right" android:drawablePadding="10dp"/>
            <TextView android:gravity="center_vertical" android:id="@+id/view_friendFridge" android:background="@drawable/white_color_bg_selector" android:paddingLeft="15dp" android:paddingRight="15dp" android:layout_width="match_parent" android:layout_height="53dp" android:text="@string/fragment_view_friend_fridge_text" android:drawableLeft="@drawable/fridge_friend_icon" android:drawableRight="@drawable/ic_arrow_right" android:drawablePadding="10dp"/>
        </LinearLayout>
        <Space android:layout_width="match_parent" android:layout_height="10dp"/>
        <TextView android:gravity="center_vertical" android:id="@+id/view_messageBoard" android:background="@drawable/white_color_bg_selector" android:paddingLeft="15dp" android:paddingRight="15dp" android:layout_width="match_parent" android:layout_height="53dp" android:text="@string/fragment_mine_fridge_message_board_text" android:drawableLeft="@drawable/ic_message_board" android:drawableRight="@drawable/ic_arrow_right" android:drawablePadding="10dp"/>
        <Space android:layout_width="match_parent" android:layout_height="10dp"/>
        <LinearLayout android:orientation="horizontal" android:id="@+id/view_collectMenu" android:background="@drawable/white_color_bg_selector" android:layout_width="match_parent" android:layout_height="53dp">
            <TextView android:gravity="center_vertical" android:paddingLeft="15dp" android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/fragment_mine_collect_menu_text" android:drawableLeft="@drawable/mine_menu_icon" android:drawablePadding="10dp"/>
            <TextView android:textColor="@color/jd_fridge_navigation_item_badge_color" android:gravity="right|center_vertical|center_horizontal|center" android:id="@+id/tv_menuCount" android:paddingRight="15dp" android:layout_width="match_parent" android:layout_height="match_parent" android:drawableRight="@drawable/ic_arrow_right" android:drawablePadding="10dp"/>
        </LinearLayout>
        <Space android:layout_width="match_parent" android:layout_height="10dp"/>
        <TextView android:gravity="center_vertical" android:id="@+id/view_shopping" android:background="@drawable/white_color_bg_selector" android:paddingLeft="15dp" android:paddingRight="15dp" android:layout_width="match_parent" android:layout_height="53dp" android:text="@string/fragment_mine_shopping_cart_text" android:drawableLeft="@drawable/shopping_cart_icon" android:drawableRight="@drawable/ic_arrow_right" android:drawablePadding="10dp"/>
        <TextView android:gravity="center_vertical" android:id="@+id/view_order" android:background="@drawable/white_color_bg_selector" android:paddingLeft="15dp" android:paddingRight="15dp" android:layout_width="match_parent" android:layout_height="53dp" android:text="@string/fragment_mine_all_orders_text" android:drawableLeft="@drawable/all_order_icon" android:drawableRight="@drawable/ic_arrow_right" android:drawablePadding="10dp"/>
        <Space android:layout_width="match_parent" android:layout_height="10dp"/>
        <LinearLayout android:orientation="horizontal" android:id="@+id/view_problemDeclare" android:background="@drawable/white_color_bg_selector" android:layout_width="match_parent" android:layout_height="53dp">
            <TextView android:gravity="center_vertical" android:paddingLeft="15dp" android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/fragment_mine_report_failur_text" android:drawableLeft="@drawable/fridge_fail_icon" android:drawablePadding="10dp"/>
            <TextView android:textColor="@color/jd_fridge_failur_report_tel_color" android:gravity="right|center_vertical|center_horizontal|center" android:id="@+id/tv_phone" android:paddingRight="15dp" android:layout_width="match_parent" android:layout_height="match_parent" android:drawableRight="@drawable/ic_arrow_right" android:drawablePadding="10dp"/>
        </LinearLayout>
        <TextView android:gravity="center_vertical" android:id="@+id/view_setting" android:background="@drawable/white_color_bg_selector" android:paddingLeft="15dp" android:paddingRight="15dp" android:layout_width="match_parent" android:layout_height="53dp" android:text="@string/fragment_mine_setting_text" android:drawableLeft="@drawable/ic_setting" android:drawableRight="@drawable/ic_arrow_right" android:drawablePadding="10dp"/>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@+id/unbinding_view" android:layout_width="match_parent" android:layout_height="match_parent" android:divider="@drawable/divider_line_shape" android:showDividers="none|beginning|middle|end">
        <Space android:layout_width="match_parent" android:layout_height="10dp"/>
        <TextView android:gravity="center_vertical" android:id="@+id/view_friendFridge_unbinding" android:background="@drawable/white_color_bg_selector" android:paddingLeft="15dp" android:paddingRight="15dp" android:layout_width="match_parent" android:layout_height="53dp" android:text="@string/fragment_view_friend_fridge_text" android:drawableLeft="@drawable/fridge_friend_icon" android:drawableRight="@drawable/ic_arrow_right" android:drawablePadding="10dp"/>
        <Space android:layout_width="match_parent" android:layout_height="10dp"/>
        <TextView android:gravity="center_vertical" android:id="@+id/view_setting_unbinding" android:background="@drawable/white_color_bg_selector" android:paddingLeft="15dp" android:paddingRight="15dp" android:layout_width="match_parent" android:layout_height="53dp" android:text="@string/fragment_mine_setting_text" android:drawableLeft="@drawable/ic_setting" android:drawableRight="@drawable/ic_arrow_right" android:drawablePadding="10dp"/>
    </LinearLayout>
</LinearLayout>