<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/jd_white_color"
    android:padding="0dp"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="@dimen/titlebar_size"
        android:background="@color/jd_green_1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/app_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:ellipsize="end"
            android:gravity="center"
            android:maxWidth="200dp"
            android:singleLine="true"
            android:text="@string/title_register"
            android:textColor="@color/jd_white_color"
            android:textSize="@dimen/title_text_size" />

        <ImageView
            android:id="@+id/return_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            app:srcCompat="@drawable/smssdk_back_arrow" />
    </RelativeLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:background="@color/jd_white_color"
        android:padding="15dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView android:textSize="16sp" android:textColor="@color/jd_text_gray_color1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/please_set_password"/>
    <RelativeLayout android:layout_width="match_parent" android:layout_height="40dp" android:layout_marginTop="20dp">
        <LinearLayout android:orientation="horizontal" android:id="@+id/password_input_layout" android:background="@drawable/white_round_gray_line_n" android:layout_width="match_parent" android:layout_height="40dp" android:layout_above="@+id/divider_line">
            <EditText android:textSize="15sp" android:textColor="@color/jd_text_gray_color1" android:textColorHint="@color/jd_text_gray_color2" android:gravity="center_vertical" android:id="@+id/password_edittext" android:background="@color/jd_transparent" android:paddingLeft="10dp" android:paddingRight="10dp" android:layout_width="match_parent" android:layout_height="match_parent" android:hint="@string/input_user_password" android:maxLines="1" android:singleLine="true" android:maxLength="20" android:layout_weight="1" android:inputType="textPassword"/>
            <ImageView android:layout_gravity="right|center_vertical|center_horizontal|center" android:id="@+id/clear_password_image_btn" android:padding="2.5dp" android:visibility="invisible" android:layout_width="25dp" android:layout_height="25dp" android:layout_marginRight="15dp" android:src="@drawable/clear_text_icon_selector"/>
            <CheckBox android:id="@+id/show_password_checkbox" android:background="@drawable/show_password_check_box_selector" android:layout_width="50dp" android:layout_height="30dp" android:layout_marginRight="10dp" android:checked="false" android:button="@null" android:layout_above="@+id/image_code_view" android:layout_alignParentRight="true" android:layout_centerVertical="true"/>
        </LinearLayout>
    </RelativeLayout>
    <TextView android:textSize="15sp" android:textColor="@color/jd_text_gray_color2" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="@string/set_password_tips"/>
    <TextView android:enabled="true" android:textSize="15sp" android:textColor="@drawable/register_text_color_selector" android:gravity="center" android:id="@+id/next_step_btn" android:background="@drawable/white_gray_round_orange_line_selector" android:layout_width="match_parent" android:layout_height="41dp" android:layout_marginTop="20dp" android:text="@string/finish_text"/>
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp">
        <TextView android:textSize="12sp" android:textColor="@color/jd_text_gray_color2" android:id="@+id/contact_jd_pre_textview" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/contact_service_hint_prefix"/>
        <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textSize="12sp" android:textColor="@color/jd_text_gray_color1" android:gravity="bottom" android:id="@+id/contact_jd_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/contact_service_hint"/>
            <View android:background="@color/jd_text_gray_color1" android:layout_width="match_parent" android:layout_height="2px"/>
        </LinearLayout>
    </LinearLayout>
    </LinearLayout>
</LinearLayout>