<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:id="@+id/signin_layout" android:background="@drawable/login_bg" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:paddingLeft="25dp" android:paddingRight="25dp" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout android:gravity="center_horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="12dp" android:layout_alignParentBottom="true">
            <TextView android:textSize="12sp" android:textColor="@color/jd_fridge_login_activity_link_text_color" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/login_agreement"/>
            <TextView android:textSize="12sp" android:textColor="@color/privacy_policy" android:id="@+id/tv_privacy_policy" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/privacy_policy"/>
        </LinearLayout>
        <TextView android:textSize="15sp" android:textColor="@color/jd_fridge_login_activity_link_text_color" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@+id/sign_up_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="55dp" android:text="@string/fast_register_title" android:layout_alignParentBottom="true"/>
        <TextView android:textSize="15sp" android:textColor="@color/jd_fridge_login_activity_link_text_color" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@+id/forget_password_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="55dp" android:text="@string/find_back_password" android:layout_alignParentRight="true" android:layout_alignParentBottom="true"/>
        <TextView android:textSize="15sp" android:textColor="@color/login_btn_color_selector" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@+id/sign_in_button" android:background="@drawable/login_btn_selector" android:layout_width="match_parent" android:layout_height="41dp" android:layout_marginBottom="20dp" android:text="@string/login_text" android:layout_above="@+id/sign_up_button"/>
        <LinearLayout android:orientation="vertical" android:id="@+id/image_code_view" android:visibility="gone" android:layout_width="match_parent" android:layout_height="55dp" android:layout_marginBottom="17dp" android:layout_above="@+id/sign_in_button">
            <View android:background="#b7b7b7" android:layout_width="match_parent" android:layout_height="0.5dp" android:layout_above="@+id/password_input_layout"/>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="54dp">
                <EditText android:textSize="15sp" android:textColor="@color/jd_fridge_login_activity_edit_text_color" android:textColorHint="@color/jd_fridge_login_activity_edit_hint_color" android:gravity="center_vertical" android:id="@+id/image_code_edittext" android:background="@color/jd_transparent" android:layout_width="match_parent" android:layout_height="55dp" android:layout_marginBottom="17dp" android:hint="请输入验证码" android:maxLines="1" android:singleLine="true" android:maxLength="6" android:layout_weight="1" android:layout_above="@+id/image_code_view" android:inputType="text"/>
                <ImageView android:id="@+id/image_code_img" android:layout_width="100dp" android:layout_height="match_parent" android:layout_marginLeft="10dp" android:scaleType="fitXY"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@+id/password_input_layout" android:layout_width="match_parent" android:layout_height="55dp" android:layout_above="@+id/image_code_view">
            <EditText android:textSize="15sp" android:textColor="@color/jd_fridge_login_activity_edit_text_color" android:textColorHint="@color/jd_fridge_login_activity_edit_hint_color" android:gravity="center_vertical" android:id="@+id/password_edittext" android:background="@color/jd_transparent" android:layout_width="match_parent" android:layout_height="55dp" android:layout_marginBottom="17dp" android:hint="@string/input_user_password" android:maxLines="1" android:singleLine="true" android:layout_weight="1" android:inputType="textPassword"/>
            <ImageView android:layout_gravity="right|center_vertical|center_horizontal|center" android:id="@+id/clear_password_image_btn" android:padding="2.5dp" android:visibility="invisible" android:layout_width="25dp" android:layout_height="25dp" android:layout_marginRight="15dp" android:src="@drawable/clear_text_icon_selector"/>
            <CheckBox android:layout_gravity="center_vertical" android:id="@+id/remember_password_checkbox" android:background="@drawable/show_password_check_box_selector" android:layout_width="50dp" android:layout_height="30dp" android:checked="false" android:button="@null" android:layout_above="@+id/image_code_view" android:layout_alignParentRight="true"/>
        </LinearLayout>
        <View android:id="@+id/divider_line" android:background="#b7b7b7" android:layout_width="match_parent" android:layout_height="0.5dp" android:layout_above="@+id/password_input_layout"/>
        <LinearLayout android:orientation="horizontal" android:id="@+id/username_input_layout" android:layout_width="match_parent" android:layout_height="55dp" android:layout_above="@+id/divider_line">
            <EditText android:textSize="15sp" android:textColor="@color/jd_fridge_login_activity_edit_text_color" android:textColorHint="@color/jd_fridge_login_activity_edit_hint_color" android:gravity="center_vertical" android:id="@+id/username_edittext" android:background="@color/jd_transparent" android:layout_width="match_parent" android:layout_height="match_parent" android:hint="@string/input_user_account" android:maxLines="1" android:singleLine="true" android:layout_weight="1"/>
            <ImageView android:layout_gravity="right|center_vertical|center_horizontal|center" android:id="@+id/clear_user_name_image_btn" android:padding="2.5dp" android:visibility="invisible" android:layout_width="25dp" android:layout_height="25dp" android:layout_marginRight="15dp" android:src="@drawable/clear_text_icon_selector"/>
        </LinearLayout>
        <TextView android:textSize="30sp" android:textColor="#58c178" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="100dp" android:text="@string/app_name" android:layout_above="@+id/username_input_layout"/>
    </RelativeLayout>
</FrameLayout>